[metadata]
name = mdext
author = BEAST Collaboration
author_email = author@example.com
description = Molecular dynamics in external potentials using PyLAMMPS
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shankar1729/mdext
project_urls =
    Bug Tracker = https://github.com/shankar1729/mdext/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    pyyaml
    numpy
    mpi4py
    h5py
    lammps

[options.packages.find]
where = src

[options.package_data]
* = py.typed

[versioneer]
VCS = git
style = pep440
versionfile_source = src/mdext/_version.py
versionfile_build = mdext/_version.py
tag_prefix = v
parentdir_prefix = mdext-
